junit + resolve issue